-- added unit/integration test support -- it's now possible to run mvn test and have spring load alfresco properly in H2 (no jetty needed) -- made test alfresco-global.properties environment aware. now to run AMP needs to be in src/test/properties/<env> -- reshuffled properties and moved to build-helper plugin to add custom resources