@@ -24,9 +24,51 @@
     <alfresco.groupId>org.alfresco</alfresco.groupId>
     <alfresco.version>4.2.b-SNAPSHOT</alfresco.version>
 
-    <!-- Values can be "alfresco" or "share". Default value is 'alfresco' assuming you are developing a repository AMP, change to share for share AMPs  -->
+    <!--  Values can be "alfresco" or "share". Default value is 'alfresco' assuming you are developing a repository AMP, change to share for share AMPs 
+        | This impact (in AMP projects) the choice of the WAR project for embedded run
+         -->
     <alfresco.client.war>alfresco</alfresco.client.war>
+    <alfresco.client.war.folder>${project.build.directory}/${project.build.finalName}</alfresco.client.war.folder>
 
+    <!-- Alfresco Repo disk storage folder (relative path) -->
+    <alfresco.data.location>alf_data_dev</alfresco.data.location>
+    <!-- Alfresco Repo configuration with embedded DB -->
+    <alfresco.db.name>alf_dev</alfresco.db.name>
+    <alfresco.db.username>alfresco</alfresco.db.username>
+    <alfresco.db.password>alfresco</alfresco.db.password>
+    <alfresco.db.params>MODE=PostgreSQL;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;MVCC=TRUE</alfresco.db.params>
+    <alfresco.db.url>jdbc:h2:./${alfresco.data.location}/h2_data/${alfresco.db.name};${alfresco.db.params}</alfresco.db.url>
+    <alfresco.db.datasource.class>org.h2.jdbcx.JdbcDataSource</alfresco.db.datasource.class>
+    <!-- Share configuration -->
+    <share.log.level>info</share.log.level>
+    <surf.wiring.mode>development</surf.wiring.mode><!-- "production" is the other allowed value -->
+
+    <!-- Context names used by webapps -->
+    <webapp.name>${project.artifactId}</webapp.name>
+
+    <!-- SDK Properties -->
+    <!--
+    Built-in multi-environment property placeholding support (also for testing); to enable it on your sub-modules
+    * create app.properties.folder (default=src/main/properties/${env}) folder structure
+    * place properties files in that folder with the correct name
+    Both 'alfresco' and 'share' sub-modules currently use it.
+    -->
+    <env>local</env>
+    <!--  Be default we assume to we load all properties files under ${app.properties.folder}
+        | and 
+        | This can be overridden your pom
+     -->
+    <app.properties.folder>src/main/properties/${env}</app.properties.folder>
+    <app.properties.test.folder>src/test/properties/${env}</app.properties.test.folder>
+    <app.properties.include>**</app.properties.include>
+    <app.properties.test.include>**</app.properties.test.include>
+    
+    <!--  Turns on/off POM properties filtering globally. By default filtering is on. 
+        | This can be overridden in your POM, but do it at your own risk
+        | as it may break SDK functionalities
+         -->
+    <app.filtering.enabled>true</app.filtering.enabled>
+    
     <!-- Maven Plugins Versions used by the SDK -->
     <maven.compiler.version>2.3.2</maven.compiler.version>
     <maven.clean.version>2.4.1</maven.clean.version>
@@ -37,37 +79,12 @@
     <maven.jar.version>2.4</maven.jar.version>
     <maven.war.version>2.2</maven.war.version>
     <maven.release.version>2.2.2</maven.release.version>
+    <maven.buildhelper.version>1.7</maven.buildhelper.version>
     <alfresco.maven.version>0.7-SNAPSHOT</alfresco.maven.version>
     <maven.jetty.version>6.1.26</maven.jetty.version>
     <h2.version>1.3.158</h2.version>
     <h2-support.version>1.5</h2-support.version>
-
-    <!-- Alfresco Repo disk storage folder (relative path) -->
-    <alfresco.data.location>alf_data_dev</alfresco.data.location>
-
-    <!-- Context names used by webapps -->
-    <webapp.name>${project.artifactId}</webapp.name>
-
-    <!--
-    Built-in multi-environment property placeholding support; to enable it on your sub-module
-    * create src/main/properties/${env} folder structure
-    * place <anyname>.properties and define <webapp.resource.filter> with the correct name
-    Both 'alfresco' and 'share' sub-modules currently use it
-    -->
-    <env>local</env>
-    <webapp.resource.filter>alfresco-global.properties</webapp.resource.filter>
-    <webapp.resource.build.folder>${project.build.outputDirectory}</webapp.resource.build.folder>
     
-    <!-- Alfresco Repo configuration with embedded DB -->
-    <alfresco.db.name>alf_jetty</alfresco.db.name>
-    <alfresco.db.username>alfresco</alfresco.db.username>
-    <alfresco.db.password>alfresco</alfresco.db.password>
-    <alfresco.db.params>MODE=PostgreSQL;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE;LOCK_TIMEOUT=10000;MVCC=TRUE</alfresco.db.params>
-    <alfresco.db.url>jdbc:h2:./${alfresco.data.location}/h2_data/${alfresco.db.name};${alfresco.db.params}</alfresco.db.url>
-    <alfresco.db.datasource.class>org.h2.jdbcx.JdbcDataSource</alfresco.db.datasource.class>
-    <!-- Share configuration -->
-    <share.log.level>info</share.log.level>
-    <surf.wiring.mode>development</surf.wiring.mode><!-- "production" is the other allowed value -->
   </properties>
   
   <repositories>
@@ -102,6 +119,7 @@
           </dependency>
      </dependencies>
   </dependencyManagement>
+  
   <build>
     <finalName>${webapp.name}</finalName>
     <pluginManagement>
@@ -111,6 +129,9 @@
           <artifactId>alfresco-maven-plugin</artifactId>
           <version>${alfresco.maven.version}</version>
           <extensions>true</extensions>
+          <configuration>
+              <filtering>${app.filtering.enabled}</filtering>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -208,69 +229,97 @@
         </configuration>
       </plugin>
     </plugins>
+    <resources>
+        <resource>
+            <directory>src/main/resources</directory>
+            <filtering>${app.filtering.enabled}</filtering>
+        </resource>
+    </resources>
+    <testResources>
+        <testResource>
+            <directory>src/test/resources</directory>
+            <filtering>${app.filtering.enabled}</filtering>
+        </testResource>
+    </testResources>
   </build>
 
   <profiles>
     <profile>
-      <id>enable-filtering</id>
-      <activation>
-        <file>
-          <exists>src/main/properties</exists>
-        </file>
-      </activation>
-      <properties>
-        <webapp.resource.filter.folder>src/main/properties/${env}</webapp.resource.filter.folder>
-        <webapp.testresource.filter.folder>src/main/properties/${env}</webapp.testresource.filter.folder>
-      </properties>
-      <build>
-        <filters>
-          <filter>${webapp.resource.filter.folder}/${webapp.resource.filter}</filter>
-        </filters>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-resources-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>copy-filtered-resources</id>
-                  <goals>
-                    <goal>copy-resources</goal>
-                  </goals>
-                  <phase>process-resources</phase>
-                  <configuration>
-                    <outputDirectory>${webapp.resource.build.folder}</outputDirectory>
-                    <resources>
-                      <resource>
-                        <directory>src/main/resources</directory>
-                        <filtering>true</filtering>
-                      </resource>
-                      <resource>
-                        <directory>${webapp.resource.filter.folder}</directory>
-                        <includes>
-                          <include>${webapp.resource.filter}</include>
-                        </includes>
-                        <filtering>true</filtering>
-                        <targetPath>${webapp.resource.build.folder}</targetPath>
-                      </resource>
-                    </resources>
-                  </configuration>
-                </execution>
-              </executions>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-        <testResources>
-          <testResource>
-            <directory>src/test/resources</directory>
-            <filtering>true</filtering>
-          </testResource>
-          <testResource>
-            <directory>${webapp.testresource.filter.folder}</directory>
-            <filtering>true</filtering>
-          </testResource>
-        </testResources>
-      </build>
+        <id>enable-properties-filtering</id>
+        <activation>
+            <file>
+                <!-- No properties allowed here. Only hardcoded values are properly interpreted -->
+                <exists>src/main/properties</exists>
+            </file>
+        </activation>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>${maven.buildhelper.version}</version>
+                    <executions>
+                        <execution>
+                            <id>add-resource</id>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>add-resource</goal>
+                            </goals>
+                            <configuration>
+                                <resources>
+                                    <resource>
+                                        <directory>${app.properties.folder}</directory>
+                                        <includes>
+                                            <include>${app.properties.include}</include>
+                                        </includes>
+                                        <filtering>${app.filtering.enabled}</filtering>
+                                    </resource>
+                                </resources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+    
+    <profile>
+        <id>enable-test-properties-filtering</id>
+        <activation>
+            <file>
+                <!-- No properties allowed here. Only hardcoded values are properly interpreted -->
+                <exists>src/test/properties</exists>
+            </file>
+        </activation>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>${maven.buildhelper.version}</version>
+                    <executions>
+                        <execution>
+                            <id>add-resource</id>
+                            <phase>generate-resources</phase>
+                            <goals>
+                                <goal>add-test-resource</goal>
+                            </goals>
+                            <configuration>
+                                <resources>
+                                    <resource>
+                                        <directory>${app.properties.test.folder}</directory>
+                                        <includes>
+                                            <include>${app.properties.test.include}</include>
+                                        </includes>
+                                        <filtering>${app.filtering.enabled}</filtering>
+                                    </resource>
+                                </resources>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
     </profile>
 
     <profile>
@@ -297,7 +346,7 @@
                   <resources>
                     <resource>
                       <directory>${project.basedir}/jetty</directory>
-                      <filtering>true</filtering>
+                      <filtering>${app.filtering.enabled}</filtering>
                     </resource>
                   </resources>
                 </configuration>
@@ -310,18 +359,6 @@
             <configuration>
               <jettyConfig>${project.build.directory}/jetty.xml</jettyConfig>
             </configuration>
-            <dependencies>
-              <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>${h2.version}</version>
-              </dependency>
-              <dependency>
-                <groupId>tk.skuro.alfresco</groupId>
-                <artifactId>h2-support</artifactId>
-                <version>${h2-support.version}</version>
-              </dependency>
-            </dependencies>
           </plugin>
         </plugins>
       </build>
@@ -345,6 +382,7 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <version>${maven.surefire.version}</version>
               <configuration>
+                  <argLine>-Xmx1524m -XX:MaxPermSize=256m -Duser.language=en</argLine>
                   <additionalClasspathElements>
                       <!-- Adds the config directory to the test classpath for unit testing purposes -->
                       <additionalClasspathElement>${project.build.directory}/${project.artifactId}-${project.version}/config</additionalClasspathElement>
@@ -353,6 +391,21 @@
             </plugin>
         </plugins>
       </build>
+      <dependencies>
+          <!-- SDK Test Dependencies -->
+          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <scope>test</scope>
+          </dependency>
+          <dependency>
+            <groupId>tk.skuro.alfresco</groupId>
+            <artifactId>h2-support</artifactId>
+            <version>${h2-support.version}</version>
+            <scope>test</scope>
+          </dependency>
+      </dependencies>
     </profile>
 
     <profile>
@@ -369,7 +422,7 @@
                 <phase>prepare-package</phase>
                 <goals><goal>unpack</goal></goals>
                 <configuration>
-                  <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
+                  <outputDirectory>${alfresco.client.war.folder}</outputDirectory>
                   <artifactItems>
                     <artifactItem>
                       <groupId>${alfresco.groupId}</groupId>
@@ -389,19 +442,19 @@
             <artifactId>maven-resources-plugin</artifactId>
             <executions>
               <execution>
-                <id>unpack-alfresco</id>
+                <id>copy-alfresco-test-resources</id>
                 <phase>prepare-package</phase>
                 <goals><goal>copy-resources</goal></goals>
                 <configuration>
-                  <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
+                  <outputDirectory>${alfresco.client.war.folder}</outputDirectory>
                   <resources>
                     <resource>
                       <directory>src/test/webapp</directory>
                     </resource>
                     <resource>
-                      <directory>src/test/resources</directory>
+                      <directory>${project.build.testOutputDirectory}</directory>
                       <targetPath>WEB-INF/classes</targetPath>
-                      <filtering>true</filtering>
+                      <filtering>${app.filtering.enabled}</filtering>
                     </resource>
                   </resources>
                 </configuration>
@@ -439,6 +492,22 @@
                     <phase>pre-integration-test</phase>
                 </execution>
             </executions>
+            <configuration>
+                <webApp>${alfresco.client.war.folder}</webApp>
+            </configuration>
+            <dependencies>
+                <!-- SDK Test Dependencies -->
+                <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <version>${h2.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>tk.skuro.alfresco</groupId>
+                    <artifactId>h2-support</artifactId>
+                    <version>${h2-support.version}</version>
+                </dependency>
+            </dependencies>
           </plugin>
         </plugins>
       </build>
